Activated integration tests towards database